--- a/Part1/gutenberg.css
+++ b/Part1/gutenberg.css
@@ -6,36 +6,50 @@ Style taken from project gutenberg book and modified by Ryan Helgoth
 body { margin-left: 20%;
     margin-right: 20%;
     text-align: justify; 
-    /*background-color: #ffeec7; 
-    */
     /* https://everytexture.com/everytexture-com-stock-paper-texture-00081/ */
     background-image: url("pageTexture.jpg");
     background-repeat: repeat-x repeat-y;
 
 }
 
-h1, h2, h3, h4, h5 {text-align: center; font-style: normal; font-weight:
-normal; line-height: 1.5; margin-top: .5em; margin-bottom: .5em;}
+h1, h2, h3, h4, h5 {
+    font-family: Georgia, serif;
+    text-align: center; 
+    font-style: normal; 
+    font-weight: bold; 
+    line-height: 1.5; 
+    margin-top: .5em; 
+    margin-bottom: .5em;}
 
-h1 {font-size: 300%;
- margin-top: 0.6em;
- margin-bottom: 0.6em;
- letter-spacing: 0.12em;
- word-spacing: 0.2em;
- text-indent: 0em;}
+h1 {
+    font-size: 300%;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
+    letter-spacing: 0.08em;
+    word-spacing: 0.1em;
+    text-indent: 0em;
+    font-style: italic;
+
+}
 h2 {font-size: 150%; margin-top: 2em; margin-bottom: 1em;}
 h3 {font-size: 130%; margin-top: 1em;}
 h4 {font-size: 120%;}
 h5 {font-size: 110%;}
 
-hr {width: 80%; margin-top: 2em; margin-bottom: 2em;}
+hr {
+    width: 100%; 
+    margin-top: 2em; 
+    margin-bottom: 2em;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
 
 div.chapter {page-break-before: always; margin-top: 4em;}
 
-p {text-indent: 1em;
-margin-top: 0.25em;
-margin-bottom: 0.25em; 
-
+p {text-indent: 2em;
+margin-top: 0.5em;
+margin-bottom: 0.5em; 
+font-family: Georgia, serif;
+font-size: 1.5em;
 
 }
 
@@ -71,6 +85,17 @@ div.fig { display:block;
        margin-top: 1em;
        margin-bottom: 1em;}
 
-a:link {color:blue; text-decoration:none}
-a:visited {color:blue; text-decoration:none}
-a:hover {color:red}
+a:link {color:rgb(155, 119, 53); text-decoration:none}
+a:visited {color:rgb(119, 70, 24); text-decoration:none}
+a:hover {color:rgb(163, 75, 40)}
+
+
+img {
+    border: 0.5em solid black;
+    border-radius: 0.75em;
+}
+
+#altTable {
+    border: 0.2em solid black;
+    border-radius: 0.5em;
+}
