--- a/homepage/good.css
+++ b/homepage/good.css
@@ -10,45 +10,55 @@ html, body {
     border: 5px solid black;
 }
 
+
+
 h1 {
     color: white;
 }
 
+h3, h4, h5 {
+    text-align: center;
+}
 
-
-#page {
-    position: relative;
-    overflow: hidden;
+#flexCols {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
 }
 
 
+#flexRows {
+    display: flex;
+    height: 100%;
+    width: 100%;
+
+}
+
 
 #header {
-    display: inline-block;
     background-color: rgb(48, 48, 48);
     border: 5px solid black;
-    width: 100%;
-    height: auto;
     text-align: center;
 }
 
 #sidebar {
     position: relative;
-    display: inline-block;
+    flex: 0;
     border: 5px solid black;
-    width: 15%;
-    height: 100%;
-    left: 0px;
+
+    
+    
+    
 
 }
 
 #sections {
-    position: absolute;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
+    text-align: center;
+    position: relative;
+    flex: 1;
     border: 5px solid black;
+
     
 }
+
