--- a/homepage/good.css
+++ b/homepage/good.css
@@ -7,12 +7,13 @@ html, body {
     margin: 0px;
     height: 100%;
     width: 100%;
+    font-family: Georgia, serif;
 }
 
 
 
 
-h3, h4, h5 {
+h1, h2, h3, h4, h5 {
     text-align: center;
 }
 
@@ -45,20 +46,21 @@ h3, h4, h5 {
 }
 
 #sidebar {
+    flex: 1;
     border: 2px solid rgb(189, 189, 189);
     border-width: 2px 2px 0px 0px;
     background-color: rgb(40, 40, 40);
-    color: white;
+    color: rgb(221, 220, 220);
     position: relative;
 
 }
 
 #sections {
     background-color: rgb(60, 60, 60);
-    color: white;
+    color: rgb(221, 220, 220);
     text-align: center;
     position: relative;
-    flex: 1;
+    flex: 7;
     overflow: auto;
 }
 
@@ -68,12 +70,27 @@ h3, h4, h5 {
 
 }
 
-img {
+#me {
+    float: left;
     height: 200px;
     width: auto;
     border-radius: 20px;
-    border: solid whitesmoke;
+    border: solid rgb(189, 189, 189);
 }
 
+#bio {
+    display: inline;
+}
 
+p {
+    font-family: Georgia, serif;
+    display: inline-block;
+}
 
+ul {
+    list-style-position: inside;
+}
+
+a:link {color:rgb(48, 119, 167); text-decoration:none}
+a:visited {color:rgb(114, 65, 155); text-decoration:none}
+a:hover {color:rgb(150, 52, 128)}
