--- a/homepage/good.css
+++ b/homepage/good.css
@@ -17,7 +17,49 @@ h1, h2, h3, h4, h5 {
     text-align: center;
 }
 
+#topBar {
+    padding: 20px; 
+    margin: 0%;
+}
 
+.contentHeader {
+    padding: 30px 0px 5px 0px; 
+    margin: 0%;
+    text-decoration: underline;
+}
+
+.subHeader {
+    padding: 20px 0px 10px 0px; 
+    font-size: 1.30em;
+    margin: 0%;
+    font-style: italic;
+    letter-spacing: 0.1em;
+}
+
+.title {
+    padding: 0px 0px 5px 0px; 
+    margin: 0%;
+
+}
+
+.historyItem {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    
+    
+}
+
+#skillList {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    list-style-position: inside;
+    
+
+}
 
 #flexRows {
     position: relative;
@@ -27,20 +69,14 @@ h1, h2, h3, h4, h5 {
 
 }
 
-/* rgb(34, 101, 146); */
+
 #header {
-    /*
-    margin-top: 0.5%;
-    margin-left: 5%;
-    margin-right: 5%;
-    
-    border: 2px solid rgb(34, 101, 146);
-    border-radius: 5px;
-    */
+    position: sticky;
+    top: 0;
     border-top: 5px solid rgb(40, 40, 40);
     border-bottom: 8px double rgb(189, 189, 189);
     background-color: rgb(40, 40, 40);
-    color: rgb(255, 255, 255);
+    color: white;
     text-align: center;
 
 }
@@ -65,32 +101,36 @@ h1, h2, h3, h4, h5 {
 }
 
 .content {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 25%;
+    margin-right: 25%;
 
 }
 
 #me {
-    float: left;
     height: 200px;
     width: auto;
     border-radius: 20px;
     border: solid rgb(189, 189, 189);
 }
 
-#bio {
-    display: inline;
-}
 
 p {
     font-family: Georgia, serif;
     display: inline-block;
+    padding: 0%; 
+    margin: 0% 5% 0% 5%;
+
 }
 
-ul {
-    list-style-position: inside;
-}
 
-a:link {color:rgb(48, 119, 167); text-decoration:none}
-a:visited {color:rgb(114, 65, 155); text-decoration:none}
-a:hover {color:rgb(150, 52, 128)}
+a:link {
+    color:rgb(48, 119, 167);
+    text-decoration: none;
+}
+a:visited {
+    color:rgb(114, 65, 155);
+    text-decoration: none;
+}
+a:hover {
+    color:rgb(150, 52, 128);
+}
